--- a/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Purchase/MyPurchases.cshtml
+++ b/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Purchase/MyPurchases.cshtml
@@ -75,9 +75,7 @@
                     </td>
                  </tr>
                 <tr style="text-align:center">
-                    <td><button style="border-color:transparent">Purchased Quantity:<br/> <span style="color:green">@pur.count</span></button></td>
-                    <td><button style="border-color:transparent">Date Purchased: <br /><span  style="color:indianred">@pur.purchase_time.Date.ToString("dd MMM yyyy")</span></button></td>
-
+                    <td><button href="~/Views/Pur/Purs.cshtml">Chọn mua:<br/> <span style="color:blue"></span></button></td
                 </tr>
                 <tr>
                     <td colspan="2" style="text-align:center">
