--- a/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Shared/_Layout.cshtml
+++ b/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer style="text-align:center">
-            <p>&copy; @DateTime.Now.Year -Shopping Cart Application | National University of Singapore | SA48 | Team 4A</p>
+            <p>&copy; @DateTime.Now.Year -HAPPY FARM| SA48 | Team 44K211.05</p>
         </footer>
     </div>
 
