--- a/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Auth/Login.cshtml
+++ b/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Auth/Login.cshtml
@@ -11,8 +11,8 @@
          <div class="row">
              <div class="col-lg-6">
                  <div class="container-fluid">
-                     <center><h1 style="font-family:Century Gothic">Just Cart </h1>
-                     <img src="~/Images/cart1.png" style="width:50%">
+                     <center><h1 style="font-family:Century Gothic;color:greenyellow">| HAPPY FARM | </h1>
+                     <img src="~/Images/schappyfarm.png" style="width:50%">
                 </div>
               </div>
 
