--- a/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Home/Home.cshtml
+++ b/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Home/Home.cshtml
@@ -31,12 +31,14 @@
             <div class="col-sm-12" style="text-align:right;">
                 <i class="glyphicon glyphicon-user"></i> @ViewBag.firstname &nbsp;&nbsp;
                 <i class="glyphicon glyphicon-eye-open"></i> @Html.ActionLink("Purchases", "Mypurchases", "Purchase", new { customer_id = @customerid }, null) &nbsp;&nbsp;
+                <i class="glyphicon glyphicon-eye-open"></i> @Html.ActionLink("Sell", "Mypurchases", "Purchase", new { customer_id = @customerid }, null) &nbsp;&nbsp;
+                <i class="glyphicon glyphicon-log-out"></i> @Html.ActionLink("Login", "Login", "Home", new { sessionId = @sessionId }, null) &nbsp;&nbsp;
                 <i class="glyphicon glyphicon-log-out"></i> @Html.ActionLink("Logout", "Logout", "Auth", new { sessionId = @sessionId }, null)
 
             </div>
         </div>
         <div class="row" style="padding:10px;">
-                <div class="col-sm-3"><span style="font-family:Century Gothic;font-size:23px;">Just Cart</span>
+                <div class="col-sm-3"><span style="font-family:Century Gothic;font-size:23px;">HAPPY FARM</span>
                 </div>
                 <form action="/Search/Partial" name="Form" method="post" onsubmit="return validate()">
                     <div class="col-sm-5" style="text-align:right;">
@@ -86,7 +88,8 @@
 
                                 <tr style="text-align:center">
                                     <td colspan="2" style="border-color:transparent;">
-                                        <img src="~/images/@product.pro_image" style="width:40%" /><br />
+                                        <img src="~/Images/@product.pro_image" width="500" height="300" style="width:60%" />
+                                    <br />
                                        <span style="color:#337ab7">@product.pro_name</span><br />
                                         <span style="color:indianred">Description : </span>@product.pro_desc<br /></td>
                                 </tr>
@@ -115,7 +118,7 @@
         }
 
     }
-    <script>
+    @*<script>
 
 
         function increment(aaa) {
@@ -170,4 +173,4 @@
 
 
         }
-    </script>
+    </script>*@
