--- a/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Purchase/ViewCart.cshtml
+++ b/ASP.NET_MVC5-ShoppingCart-master/ShoppingCart_ASP.NET_MVC5/Views/Purchase/ViewCart.cshtml
@@ -26,7 +26,7 @@
         <br />
         <div class="row">
             <div class="col-sm-2" style="text-align:left;">
-                <button style="background-color:white;" class="btn btn-outline-success"><span style="color:darkred">Total Price :</span> $ <span id='subtotal' style="color:green"></span> &nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-shopping-cart"></i></button>
+                <button style="background-color:white;" class="btn btn-outline-success"><span style="color:darkred">Total :</span> $ <span id='subtotal' style="color:green"></span> &nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-shopping-cart"></i></button>
             </div>
 
             <div class="col-sm-7" style="text-align:left;">
@@ -72,6 +72,7 @@
                         <tr style="text-align:center">
 
                             <td colspan="2" style="border-color:transparent;">
+
                                 <img src="~/images/@product.pro_image" style="width:20%" />
                                 <span style="color:#337ab7">@product.pro_name</span>
                                 <span style="color:indianred">,</span>@product.pro_desc
